--- a/index.html
+++ b/index.html
@@ -214,9 +214,10 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="mailto:cwvecchione@gmail.com"><i class="far fa-envelope"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/cwvecchione/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/cwvecchione"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/cwvecchione/"><i class="fab fa-fw fa-facebook-f"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
